feature(answer):implement the answer question feature
[Delivers #168948472]
